--- a/novoteste/1Sobre.html
+++ b/novoteste/1Sobre.html
@@ -93,13 +93,14 @@
 
         <div class="container-fluid text-center bg-body-tertiary">
 
-            <div class="container-fluid">
-                <div class="row mx-5  ">
-                    <div class="col-md-4 mx-4">
-                        <div src="img/caminhando.jpg" title="caminhando" alt="Caminhando" width="300" height="450">
+            <div class="container">
+                <div class="row">
 
+                    <div class="col-md-6 ">
+                        <img src="img/caminhando.jpg" title="caminhando" alt="Caminhando" >
                     </div>
-                    <div class="col-md-7 pt-5 text-start ">
+
+                    <div class="col-md-6 pt-5 text-start ">
 
                         <p class="display-6  "> Eu sou Lázaro, tenho 23 anos e sou de Salvador-BA </p>
                         <hr>
@@ -116,10 +117,10 @@
                 </div>
             </div>
 
-            <div class="container-fluid ">
-                <div class="row mt-4 mx-5 pt-5">
+            <div class="container ">
+                <div class="row mt-4  pt-5">
 
-                    <div class="col-md-6 mt-1 text-start ">
+                    <div class="col-md-6 text-start ">
                         <p class=" display-6"> Meu nome é Júnior, tenho 26 anos e moro na cidade de
                             Araioses, interior do Maranhão. </p>
 
@@ -134,24 +135,24 @@
                     </div>
 
                     <div class="col-md-6 px-5">
-                        <img src="img/posto.jpg" alt="posto" width="500" height="332">
+                        <img class="img-fluid" src="img/posto.jpg" title="posto" alt="posto">
                     </div>
                 </div>
             </div>
 
-            <div class="container-fluid">
-                <div class="row mt-4 mx-5 pt-5 ">
+            <div class="container">
+                <div class="row mt-4 mt-5 pt-5">
 
                     <div class="col-md-6 px-5  ">
-                        <img src="img/pensamento.jpg" alt="Caminhando" width="500" height="300">
+                        <img class="img-fluid" src="img/pensamento.jpg" alt="Caminhando" width="500" height="300">
 
                     </div>
 
                     <div class="col-md-6 mt-1 text-start">
 
-                        <p class="display-6  "> Sou o Eduardo tenho 24 anos, tambem resido em Salvador-BA. </p>
+                        <p class="display-6  mt-3"> Sou o Eduardo tenho 24 anos, tambem resido em Salvador-BA. </p>
                         <hr>
-                        <p class="mt-3 ">
+                        <p>
 
                             Smepre achei que um dos problemas da comunidade fosse a falta de orientação para o futuro
                             dos jovens, que muitas vezes estão indecisos sobre carreiras ou transição para a vida
@@ -165,10 +166,10 @@
                 </div>
             </div>
 
-            <div class="container-fluid ">
-                <div class="row mt-4 pt-5 mx-5">
+            <div class="container ">
+                <div class="row mt-4 pt-5 ">
 
-                    <div class="col-md-6 mt-5 text-start  mx-4 px-5 ">
+                    <div class="col-md-6 mt-5 text-start  ">
                         <p class=" display-6"> Olá, meu nome é Allef e resido em Salvador-BA. </p>
 
                         <p class=" mt-3 ">
@@ -180,8 +181,9 @@
                         </p>
                         <hr>
                     </div>
-                    <div class="col-md-5 mx-4">
-                        <img src="img/fracass.jpg" alt="posto" width="300" height="450">
+
+                    <div class="col-md-6 ">
+                        <img class="img-fluid" src="img/fracass.jpg" alt="posto" width="300" height="450">
                     </div>
                 </div>
             </div>
@@ -193,12 +195,13 @@
             <div class="row">
 
                 <div class="col-md-5 mx-5 px-5 pb-5">
-                    <img src="img/analista.jpg" alt="analista" width="500" height="368">
+                    <img class="img-fluid" src="img/analista.jpg" alt="analista" width="500" height="368">
                 </div>
 
-                <div class="col-md-5 py-5 my-5">
+                <div class="col-md-5 ">
 
-                    <p class="mt-5">Com base em todos os depoimentos que foram feitos sobre problemas e soluções, nasceu
+                    <p>
+                        Com base em todos os depoimentos que foram feitos sobre problemas e soluções, nasceu
                         o Projeto Infor Mei que leva conhecimento de maneira simplificada acerca de gestão de negócios.
                     </p>
                     <hr>
