--- a/objetivo.html
+++ b/objetivo.html
@@ -1,33 +1,39 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
-    <title>Objetivo</title>
+    <title>PrimeiroSite</title>
 </head>
 
 <body>
     <header>
         <nav class="navbar navbar-expand-lg bg-transparent">
-            <div class="container-fluid px-5">
+            <div class="container-fluid px-5 ">
                 <a class="navbar-brand" href="#">
-                    <img src="img/teste1 (2).png" alt="LogoMarca" width="170" height="125" class="d-inline-block align-text-top">
+                    <img src="img/teste1 (2).png" alt="LogoMarca" width="170" height="125"
+                        class="d-inline-block align-text-top">
                 </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="#">Sobre Nós/Surgirmento</a>
+                            <a class="nav-link active" aria-current="page" href="#">Sobre nós/Surgirmento</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Produto/Visão</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="#">Objetivo</a>
+                            <a class="nav-link" href="#">Objetivo</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Patrocinadores</a>
@@ -85,9 +91,17 @@
             </div>
         </div>
     </main>
+    
+    <footer class="container-fluid text-white bg-dark">
+        <div class="row pb-5 pt-5 ">
+        </div>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
+
         </script>
 </body>
+
+
 </html>
