--- a/objetivo.html
+++ b/objetivo.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
-    <title>PrimeiroSite</title>
+    <title>Objetivo</title>
 </head>
 
 <body>
@@ -27,13 +27,13 @@
                 <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Sobre nós/Surgirmento</a>
+                            <a class="nav-link" aria-current="page" href="#">Sobre nós/Surgirmento</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Produto/Visão</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Objetivo</a>
+                            <a class="nav-link active" href="#">Objetivo</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Patrocinadores</a>
@@ -91,7 +91,7 @@
             </div>
         </div>
     </main>
-    
+
     <footer class="container-fluid text-white bg-dark">
         <div class="row pb-5 pt-5 ">
         </div>
