--- a/1Sobre.html
+++ b/1Sobre.html
@@ -27,13 +27,13 @@
                 <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Sobre nós/Surgirmento</a>
+                            <a class="nav-link active" aria-current="page" href="1Sobre.html">Sobre nós/Surgirmento</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Produto/Visão</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Objetivo</a>
+                            <a class="nav-link" href="objetivo.html">Objetivo</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Patrocinadores</a>
