--- a/objetivo.html
+++ b/objetivo.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+    
     <header>
         <nav class="navbar navbar-expand-lg bg-transparent">
             <div class="container-fluid px-5 ">
@@ -27,7 +28,7 @@
                 <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="#">Sobre nós/Surgirmento</a>
+                            <a class="nav-link" aria-current="page" href="1Sobre.html">Sobre nós/Surgirmento</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Produto/Visão</a>
@@ -45,12 +46,15 @@
     </header>
 
     <main class="container">
+        <div class="" id="bg-image">
         <div class="container text-center text-body-emphasis">
-            <div class="col-lg-12 mb-4 p-4 bg-body-tertiary">
-                <h1 class="display-3">O que oferecemos</h1>
+            <div class="row m-3 p-3 bg-body-tertiary bg-opacity-100">
+                <div class="col-lg-12">
+                    <h1 class="display-3">O que oferecemos</h1>
+                </div>
             </div>
-            <div class="row m-3 p-4">
-                <div class="col-lg-4 my-3">
+            <div class="row m-1 p-3">
+                <div class="col-lg-4 p-3 bg-body-tertiary rounded">
                     <div class="card">
                         <img src="img/produtividade.jpg" alt="" class="w-100 rounded-top">
                         <div class="card-body">
@@ -59,7 +63,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 my-3">
+                <div class="col-lg-4 py-3 bg-body-tertiary rounded">
                     <div class="card">
                         <img src="img/informacao.jpg" alt="" class="w-100 rounded-top">
                         <div class="card-body">
@@ -68,7 +72,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 my-3">
+                <div class="col-lg-4 py-3 bg-body-tertiary rounded">
                     <div class="card">
                         <img src="img/suporte.jpg" alt="" class="w-100 rounded-top">
                         <div class="card-body">
@@ -79,7 +83,7 @@
                 </div>
             </div>
         </div>
-        <div class="row bg-body-tertiary m-5 my-5 p-3 align-items-center rounded">
+        <div class="row m-4 p-3 align-items-center bg-body-tertiary rounded">
             <div class="col-lg-4">
                 <img src="img/equipetrab.jpg" alt="ambiente de trabalho" class="img-fluid w-100">
             </div>
@@ -100,7 +104,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
 
-        </script>
+    </script>
+    </div>
 </body>
 
 
