mudanças no background

--- a/1Sobre.html
+++ b/1Sobre.html
@@ -13,11 +13,12 @@
 </head>
 
 <body>
+    <div id="bg-image">
     <header>
-        <nav class="navbar navbar-expand-lg bg-transparent">
+        <nav class="navbar navbar-expand-lg bg-body-tertiary bg-opacity-75">
             <div class="container-fluid px-5 ">
                 <a class="navbar-brand" href="#">
-                    <img src="img/teste1 (2).png" alt="LogoMarca" width="170" height="125"
+                    <img src="img/teste1-sem-fundo.png" alt="LogoMarca" width="170" height="125"
                         class="d-inline-block align-text-top">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -42,9 +43,6 @@
                 </div>
             </div>
         </nav>
-    </header>
-
-    <main>
 
         <div id="banner" class="carousel slide" data-bs-ride="carousel">
 
@@ -88,6 +86,9 @@
                 <span class="carousel-control-next-icon"></span>
             </button>
         </div>
+    </header>
+
+    <main>
 
         <p class="display-4 text-center m-5"> UM POUCO SOBRE NÓS</p>
 
@@ -220,6 +221,7 @@
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
 
         </script>
+    </div>
 </body>
 
 
