--- a/objetivo.html
+++ b/objetivo.html
@@ -13,12 +13,12 @@
 </head>
 
 <body>
-    
+    <div id="bg-image">
     <header>
-        <nav class="navbar navbar-expand-lg bg-transparent">
+        <nav class="navbar navbar-expand-lg bg-body-tertiary bg-opacity-75">
             <div class="container-fluid px-5 ">
                 <a class="navbar-brand" href="#">
-                    <img src="img/teste1 (2).png" alt="LogoMarca" width="170" height="125"
+                    <img src="img/teste1-sem-fundo.png" alt="LogoMarca" width="170" height="125"
                         class="d-inline-block align-text-top">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -45,8 +45,8 @@
         </nav>
     </header>
 
-    <main class="container">
-        <div class="" id="bg-image">
+    <main>
+        
         <div class="container text-center text-body-emphasis">
             <div class="row m-3 p-3 bg-body-tertiary bg-opacity-100">
                 <div class="col-lg-12">
@@ -83,15 +83,17 @@
                 </div>
             </div>
         </div>
-        <div class="row m-4 p-3 align-items-center bg-body-tertiary rounded">
-            <div class="col-lg-4">
-                <img src="img/equipetrab.jpg" alt="ambiente de trabalho" class="img-fluid w-100">
-            </div>
-            <div class="col-lg">
-                <h1 class="display-4 fst-italic my-2">O nosso objetivo</h1>
-                <p class="lead my-3">
-                    O Projeto Infor Mei surge para impulsionar o crescimento e aprimoramento das regiões, identificando e atendendo às necessidades fundamentais das comunidades. Oferecemos suporte essencial para microempreendedores e autônomos, fornecendo ferramentas especializadas de gerenciamento de tempo, marketing e controle de custos, visando aprimorar suas operações e promover o sucesso de seus empreendimentos.
-                </p>
+        <div class="container">
+            <div class="row m-4 p-3 align-items-center bg-body-tertiary rounded">
+                <div class="col-lg-4">
+                    <img src="img/equipetrab.jpg" alt="ambiente de trabalho" class="img-fluid w-100">
+                </div>
+                <div class="col-lg">
+                    <h1 class="display-4 fst-italic my-2">O nosso objetivo</h1>
+                    <p class="lead my-3">
+                        O Projeto Infor Mei surge para impulsionar o crescimento e aprimoramento das regiões, identificando e atendendo às necessidades fundamentais das comunidades. Oferecemos suporte essencial para microempreendedores e autônomos, fornecendo ferramentas especializadas de gerenciamento de tempo, marketing e controle de custos, visando aprimorar suas operações e promover o sucesso de seus empreendimentos.
+                    </p>
+                </div>
             </div>
         </div>
     </main>
