Criei o texto e adicionei imagem

--- a/4Patrocinadores.html
+++ b/4Patrocinadores.html
@@ -72,8 +72,22 @@
         <div class="container">
             <h3 class="display-4 mt-5 mb-5">A nossa escolha</h3>
         </div>
-        <div class="container mb-5">
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nemo vel, eos magnam non adipisci aperiam nobis praesentium repellendus eligendi dolores, vero totam debitis laborum, sed laudantium quae distinctio incidunt commodi.</p>
+        <div class="justify-content-center bg-body-tertiary container mb-5 row">
+            <div class="col-lg">
+                <p clas="col-lg">
+                    Com uma impressionante presença nacional, classificando-se como a 9ª empresa de maior volume de
+                    vendas
+                    no Brasil, o Mercado Livre emerge como uma parceria de magnitude extraordinária, capaz de atrair
+                    colaboradores e clientes provenientes de diversas esferas. Por outro lado, o Senac destaca-se com
+                    mais
+                    de 7 mil indicações bem-sucedidas para o mercado de trabalho, experimentando um notável crescimento
+                    no
+                    setor de Tecnologia. Associar-se a essa instituição proporcionaria uma visibilidade significativa,
+                    representando um valioso acréscimo para nossa trajetória.
+                </p>
+
+                <img src="./img/patrocinadores.png" alt="imgdosptrcinadores" class="img-fluid-w-100">
+            </div>
         </div>
     </main>
 
