--- a/1Sobre.html
+++ b/1Sobre.html
@@ -74,7 +74,7 @@
                 <div class="carousel-item">
                     <img src="img/analise.jpg" alt="img3" class="d-block w-100">
                     <div class="carousel-caption">
-                        <h2>ATUAMOS EM ALGUMAS ÁREAS</h2>
+                        <h2>ATUAMOS EM AlgUMAS ÁREAS</h2>
                         <P> CONHEÇA UM POUCO DO NOSSO TRABALHO</P>
                     </div>
                 </div>
@@ -91,16 +91,16 @@
 
         <p class="display-4 text-center m-5"> UM POUCO SOBRE NÓS</p>
 
-        <div class="container-fluid text-center bg-body-tertiary">
+        <div class="container-fluid">
 
-            <div class="container">
-                <div class="row">
+            <div class="container bg-body-secondary">
+                <div class="row justify-content-around">
 
-                    <div class="col-md-6 ">
-                        <img src="img/caminhando.jpg" title="caminhando" alt="Caminhando" >
+                    <div class="col-lg-4 text-center">
+                        <img src="img/caminhando.jpg" title="caminhando" alt="Caminhando">
                     </div>
 
-                    <div class="col-md-6 pt-5 text-start ">
+                    <div class="col-lg-6 pt-5 text-start">
 
                         <p class="display-6  "> Eu sou Lázaro, tenho 23 anos e sou de Salvador-BA </p>
                         <hr>
@@ -117,14 +117,14 @@
                 </div>
             </div>
 
-            <div class="container ">
-                <div class="row mt-4  pt-5">
+            <div class="container bg-body-secondary">
+                <div class="row justify-content-around m-5">
 
-                    <div class="col-md-6 text-start ">
-                        <p class=" display-6"> Meu nome é Júnior, tenho 26 anos e moro na cidade de
+                    <div class="col-lg-6 text-start">
+                        <p class="display-6 mt-3"> Meu nome é Júnior, tenho 26 anos e moro na cidade de
                             Araioses, interior do Maranhão. </p>
 
-                        <p class=" mt-3 ">
+                        <p>
                             <hr>
                             Em cidades do interior, as necessidades dos moradores muitas vezes são atendidas em
                             localidades vizinhas. Para facilitar o transporte informal prestado por motoristas locais,
@@ -134,23 +134,23 @@
                         <hr>
                     </div>
 
-                    <div class="col-md-6 px-5">
+                    <div class="col-lg-5 m-4 pt-5">
                         <img class="img-fluid" src="img/posto.jpg" title="posto" alt="posto">
                     </div>
                 </div>
             </div>
 
-            <div class="container">
-                <div class="row mt-4 mt-5 pt-5">
+            <div class="container bg-body-secondary">
+                <div class="row justify-content-around m-5">
 
-                    <div class="col-md-6 px-5  ">
-                        <img class="img-fluid" src="img/pensamento.jpg" alt="Caminhando" width="500" height="300">
+                    <div class="col-lg-6 py-5">
+                        <img class="img-fluid" src="img/pensamento.jpg" alt="pensamento">
 
                     </div>
 
-                    <div class="col-md-6 mt-1 text-start">
+                    <div class="col-lg-6 mt-1 text-start">
 
-                        <p class="display-6  mt-3"> Sou o Eduardo tenho 24 anos, tambem resido em Salvador-BA. </p>
+                        <p class="display-6 mt-3"> Sou o Eduardo tenho 24 anos, tambem resido em Salvador-BA. </p>
                         <hr>
                         <p>
 
@@ -166,14 +166,14 @@
                 </div>
             </div>
 
-            <div class="container ">
-                <div class="row mt-4 pt-5 ">
+            <div class="container bg-body-secondary">
+                <div class="row justify-content-around my-5">
 
-                    <div class="col-md-6 mt-5 text-start  ">
-                        <p class=" display-6"> Olá, meu nome é Allef e resido em Salvador-BA. </p>
+                    <div class="col-lg-6 ">
 
-                        <p class=" mt-3 ">
-                            <hr>
+                        <p class="display-6 mt-5 "> Olá, meu nome é Allef e resido em Salvador-BA. </p>
+                        <hr>
+                        <p class=" mt-3">
                             Analisando a minha comunidade, percebi que a desinformação é o ponto principal para o
                             fracasso dos negócios. Sabendo disso, imaginei uma maneira de informar os
                             microempreendedores a gerir seu negócio de forma inteligente e eficaz para continuar
@@ -182,8 +182,8 @@
                         <hr>
                     </div>
 
-                    <div class="col-md-6 ">
-                        <img class="img-fluid" src="img/fracass.jpg" alt="posto" width="300" height="450">
+                    <div class="col-lg-4 text-center">
+                        <img class="img-fluid" src="img/fracass.jpg" title="fracass" alt="fracass">
                     </div>
                 </div>
             </div>
@@ -191,15 +191,16 @@
 
         <h3 id="surgimento" class=" display-4 text-center m-5 px-5"> COMO SURGIU O PROJETO</h3>
 
-        <div class="container-fluid text-center">
-            <div class="row">
+        <div class="container bg-body-secondary mb-5">
 
-                <div class="col-md-5 mx-5 px-5 pb-5">
-                    <img class="img-fluid" src="img/analista.jpg" alt="analista" width="500" height="368">
+            <div class="row justify-content-around">
+
+                <div class="col-lg m-5 text-center">
+                    <img class="img-fluid " src="img/analista.jpg" alt="analista">
                 </div>
 
-                <div class="col-md-5 ">
-
+                <div class="col-lg-5 m-5">
+                    <hr>
                     <p>
                         Com base em todos os depoimentos que foram feitos sobre problemas e soluções, nasceu
                         o Projeto Infor Mei que leva conhecimento de maneira simplificada acerca de gestão de negócios.
@@ -212,7 +213,8 @@
     </main>
 
     <footer class="container-fluid text-white bg-dark">
-        <div class="row pb-5 pt-5 ">
+        <div class="row p-5 ">
+
         </div>
     </footer>
 
