--- a/4Patrocinadores.html
+++ b/4Patrocinadores.html
@@ -45,22 +45,26 @@
     </header>
 
     <main>
+
         <h3 class="display-4 text-center mb-5 mt-2 ">Patrocinadores</h3>
+
         <div class="row text-center justify-content-center ">
+
             <div class="card mx-3" style="width: 18rem;">
+
                 <img class="card-img-top" src="./img/mercadolivre.jpg" alt="imagem Mercado Livre">
-                <div class="card-body">
-                    <p class="card-text">Na economia do conhecimento, há inúmeras oportunidades disponíveis que dependem
-                        da transformação digital das pessoas para que possam ser capitalizadas.
+                <div class="card-body justify-content-around">
+                    <p class="card-text text-start">
+                        Na economia do conhecimento, há inúmeras oportunidades disponíveis que dependem da transformação digital das pessoas para que possam ser capitalizadas.
                         Afroempreendedorismo e Certified Tech Developer são alguns dos projetos que o Mercado Livre
                         oferta visando a capacitação dos seus afiliados no mundo Tech e marketing digital.</p>
                 </div>
             </div>
 
             <div class="card" style="width: 18rem;">
-                <img class="card-img-top" src="./img/senac-logo-1-1.png" alt="imagem Senac">
+                <img class="card-img-top my-5" src="./img/senac-logo-1-1.png" alt="imagem Senac">
                 <div class="card-body">
-                    <p class="card-text">Desde 1946, o Senac é o principal educador profissional para o setor de
+                    <p class="card-text text-start">Desde 1946, o Senac é o principal educador profissional para o setor de
                         Comércio, Serviços e Turismo no
                         Brasil. Presente em mais de 1.800 municípios, mantém uma avançada infraestrutura com mais de 600
                         unidades, oferecendo cursos presenciais e a distância em diversas áreas. Do nível básico ao
@@ -69,26 +73,36 @@
                 </div>
             </div>
         </div>
-        <div class="container">
-            <h3 class="display-4 mt-5 mb-5">A nossa escolha</h3>
-        </div>
-        <div class="justify-content-center bg-body-tertiary container mb-5 row">
-            <div class="col-lg">
-                <p clas="col-lg">
-                    Com uma impressionante presença nacional, classificando-se como a 9ª empresa de maior volume de
-                    vendas
-                    no Brasil, o Mercado Livre emerge como uma parceria de magnitude extraordinária, capaz de atrair
-                    colaboradores e clientes provenientes de diversas esferas. Por outro lado, o Senac destaca-se com
-                    mais
-                    de 7 mil indicações bem-sucedidas para o mercado de trabalho, experimentando um notável crescimento
-                    no
-                    setor de Tecnologia. Associar-se a essa instituição proporcionaria uma visibilidade significativa,
-                    representando um valioso acréscimo para nossa trajetória.
-                </p>
 
-                <img src="./img/patrocinadores.png" alt="imgdosptrcinadores" class="img-fluid-w-100">
+        <div class="container">
+
+            <div>
+                <h3 class="display-4 mt-5 mb-5 text-center">A nossa escolha</h3>
+            </div>
+
+            <div class="row align-content-around bg-body-tertiary container mb-5">
+                <div class="col-lg my-5">
+                    <p>
+                        Com uma impressionante presença nacional, classificando-se como a 9ª empresa de maior volume de
+                        vendas
+                        no Brasil, o Mercado Livre emerge como uma parceria de magnitude extraordinária, capaz de atrair
+                        colaboradores e clientes provenientes de diversas esferas. Por outro lado, o Senac destaca-se
+                        com
+                        mais
+                        de 7 mil indicações bem-sucedidas para o mercado de trabalho, experimentando um notável
+                        crescimento
+                        no
+                        setor de Tecnologia. Associar-se a essa instituição proporcionaria uma visibilidade
+                        significativa,
+                        representando um valioso acréscimo para nossa trajetória.
+                    </p>
+                </div>
+
+                <div class="col-lg my-5"> <img src="./img/patrocinadores.png" alt="imgdosptrcinadores" class="img-fluid-w-100">
+                </div>
             </div>
         </div>
+
     </main>
 
     <footer class="container-fluid text-white bg-dark">
