adicionando plano de fundo
plano de fundo adicionado com algumas diferenças

--- a/1Sobre.html
+++ b/1Sobre.html
@@ -89,125 +89,134 @@
             </button>
         </div>
 
-        <p class="display-4 text-center m-5"> UM POUCO SOBRE NÓS</p>
+        <div id="bg-image">
 
-        <div class="container-fluid">
+            <p class="display-4 text-center m-5 fw-semibold"> UM POUCO SOBRE NÓS</p>
+            <div class="container-fluid text-center">
 
-            <div class="container bg-body-secondary">
+                <div class="container bg-body-secondary">
+                    <div class="row justify-content-around">
+
+                        <div class="col-lg-4 text-center">
+                            <img src="img/caminhando.jpg" title="caminhando" alt="Caminhando">
+                        </div>
+
+                        <div class="col-lg-6 pt-5 text-start">
+
+                            <p class="display-6 fst-italic"> Eu sou Lázaro, tenho 23 anos e sou de Salvador-BA </p>
+                            <hr>
+                            <p class=" mt-3 lead">
+                                Ao enfrentar a realidade local, notei que a carência de conhecimento sobre o
+                                desenvolvimento
+                                econômico em regiões com poucas oportunidades é um desafio significativo. Muitos optam
+                                por
+                                empreender por conta própria, estabelecendo pequenos negócios diante da escassez.
+                                Inicialmente,
+                                minha proposta era criar ferramentas para impulsionar esse crescimento nos
+                                empreendimentos
+                                locais.
+                            </p>
+                            <hr>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="container bg-body-secondary">
+                    <div class="row justify-content-around m-5">
+
+                        <div class="col-lg-6 text-start ">
+                            <p class="display-6 mt-3 fst-italic"> Meu nome é Júnior, tenho 26 anos e moro na cidade de
+                                Araioses, interior do Maranhão. </p>
+
+                            <p class="lead">
+                                <hr>
+                                Em cidades do interior, as necessidades dos moradores muitas vezes são atendidas em
+                                localidades vizinhas. Para facilitar o transporte informal prestado por motoristas
+                                locais,
+                                proponho a criação de um aplicativo de caronas, tornando esse serviço mais prático e
+                                acessível à população que realiza esse trajeto diariamente.
+                            </p>
+                            <hr>
+                        </div>
+
+                        <div class="col-lg-5 m-4 pt-5">
+                            <img class="img-fluid" src="img/posto.jpg" title="posto" alt="posto">
+                        </div>
+                    </div>
+                </div>
+
+                <div class="container bg-body-secondary">
+                    <div class="row justify-content-around m-5">
+
+                        <div class="col-lg-6 py-5">
+                            <img class="img-fluid" src="img/pensamento.jpg" alt="pensamento">
+                        </div>
+
+                        <div class="col-lg-6 mt-1 text-start">
+
+                            <p class="display-6 mt-3 fst-italic"> Sou o Eduardo tenho 24 anos, tambem resido em Salvador-BA. </p>
+                            <hr>
+                            <p class="lead">
+
+                                Sempre achei que um dos problemas da comunidade fosse a falta de orientação para o
+                                futuro
+                                dos jovens, que muitas vezes estão indecisos sobre carreiras ou transição para a vida
+                                adulta. Uma solução seria um projeto digital com opções apresentadas por mentores, como
+                                um
+                                aplicativo ou site com vídeos, mini games e testes de aptidão para tornar o processo
+                                mais
+                                atrativo e eficiente.
+
+                            </p>
+                            <hr>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="container bg-body-secondary">
+                    <div class="row justify-content-around my-5">
+
+                        <div class="col-lg-6 text-start">
+
+                            <p class="display-6 mt-5 fst-italic"> Olá, meu nome é Allef e resido em Salvador-BA. </p>
+                            <hr>
+                            <p class=" mt-3 lead ">
+                                Analisando a minha comunidade, percebi que a desinformação é o ponto principal para o
+                                fracasso dos negócios. Sabendo disso, imaginei uma maneira de informar os
+                                microempreendedores a gerir seu negócio de forma inteligente e eficaz para continuar
+                                crescendo no mercado de trabalho.
+                            </p>
+                            <hr>
+                        </div>
+
+                        <div class="col-lg-4 text-center">
+                            <img class="img-fluid" src="img/fracass.jpg" title="fracass" alt="fracass">
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <h3 id="surgimento" class=" display-4 text-center m-5 px-5 fw-semibold"> COMO SURGIU O PROJETO</h3>
+
+            <div class="container bg-body-secondary mb-5">
+
                 <div class="row justify-content-around">
 
-                    <div class="col-lg-4 text-center">
-                        <img src="img/caminhando.jpg" title="caminhando" alt="Caminhando">
+                    <div class="col-lg m-5 text-center">
+                        <img class="img-fluid " src="img/analista.jpg" alt="analista">
                     </div>
 
-                    <div class="col-lg-6 pt-5 text-start">
-
-                        <p class="display-6  "> Eu sou Lázaro, tenho 23 anos e sou de Salvador-BA </p>
+                    <div class="col-lg-5 m-5">
                         <hr>
-                        <p class=" mt-3">
-                            Ao enfrentar a realidade local, notei que a carência de conhecimento sobre o desenvolvimento
-                            econômico em regiões com poucas oportunidades é um desafio significativo. Muitos optam por
-                            empreender por conta própria, estabelecendo pequenos negócios diante da escassez.
-                            Inicialmente,
-                            minha proposta era criar ferramentas para impulsionar esse crescimento nos empreendimentos
-                            locais.
-                        </p>
-                        <hr>
-                    </div>
-                </div>
-            </div>
-
-            <div class="container bg-body-secondary">
-                <div class="row justify-content-around m-5">
-
-                    <div class="col-lg-6 text-start">
-                        <p class="display-6 mt-3"> Meu nome é Júnior, tenho 26 anos e moro na cidade de
-                            Araioses, interior do Maranhão. </p>
-
-                        <p>
-                            <hr>
-                            Em cidades do interior, as necessidades dos moradores muitas vezes são atendidas em
-                            localidades vizinhas. Para facilitar o transporte informal prestado por motoristas locais,
-                            proponho a criação de um aplicativo de caronas, tornando esse serviço mais prático e
-                            acessível à população que realiza esse trajeto diariamente.
+                        <p class="lead">
+                            Com base em todos os depoimentos que foram feitos sobre problemas e soluções, nasceu
+                            o Projeto Infor Mei que leva conhecimento de maneira simplificada acerca de gestão de
+                            negócios.
                         </p>
                         <hr>
                     </div>
 
-                    <div class="col-lg-5 m-4 pt-5">
-                        <img class="img-fluid" src="img/posto.jpg" title="posto" alt="posto">
-                    </div>
                 </div>
-            </div>
-
-            <div class="container bg-body-secondary">
-                <div class="row justify-content-around m-5">
-
-                    <div class="col-lg-6 py-5">
-                        <img class="img-fluid" src="img/pensamento.jpg" alt="pensamento">
-
-                    </div>
-
-                    <div class="col-lg-6 mt-1 text-start">
-
-                        <p class="display-6 mt-3"> Sou o Eduardo tenho 24 anos, tambem resido em Salvador-BA. </p>
-                        <hr>
-                        <p>
-
-                            Smepre achei que um dos problemas da comunidade fosse a falta de orientação para o futuro
-                            dos jovens, que muitas vezes estão indecisos sobre carreiras ou transição para a vida
-                            adulta. Uma solução seria um projeto digital com opções apresentadas por mentores, como um
-                            aplicativo ou site com vídeos, mini games e testes de aptidão para tornar o processo mais
-                            atrativo e eficiente.
-
-                        </p>
-                        <hr>
-                    </div>
-                </div>
-            </div>
-
-            <div class="container bg-body-secondary">
-                <div class="row justify-content-around my-5">
-
-                    <div class="col-lg-6 ">
-
-                        <p class="display-6 mt-5 "> Olá, meu nome é Allef e resido em Salvador-BA. </p>
-                        <hr>
-                        <p class=" mt-3">
-                            Analisando a minha comunidade, percebi que a desinformação é o ponto principal para o
-                            fracasso dos negócios. Sabendo disso, imaginei uma maneira de informar os
-                            microempreendedores a gerir seu negócio de forma inteligente e eficaz para continuar
-                            crescendo no mercado de trabalho.
-                        </p>
-                        <hr>
-                    </div>
-
-                    <div class="col-lg-4 text-center">
-                        <img class="img-fluid" src="img/fracass.jpg" title="fracass" alt="fracass">
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <h3 id="surgimento" class=" display-4 text-center m-5 px-5"> COMO SURGIU O PROJETO</h3>
-
-        <div class="container bg-body-secondary mb-5">
-
-            <div class="row justify-content-around">
-
-                <div class="col-lg m-5 text-center">
-                    <img class="img-fluid " src="img/analista.jpg" alt="analista">
-                </div>
-
-                <div class="col-lg-5 m-5">
-                    <hr>
-                    <p>
-                        Com base em todos os depoimentos que foram feitos sobre problemas e soluções, nasceu
-                        o Projeto Infor Mei que leva conhecimento de maneira simplificada acerca de gestão de negócios.
-                    </p>
-                    <hr>
-                </div>
-
             </div>
         </div>
     </main>
