fonte do título em negrito

--- a/objetivo.html
+++ b/objetivo.html
@@ -50,7 +50,7 @@
         <div class="container text-center text-body-emphasis">
             <div class="row m-3 p-3 bg-body-tertiary bg-opacity-100">
                 <div class="col-lg-12">
-                    <h1 class="display-3">O que oferecemos</h1>
+                    <h1 class="display-3 fw-semibold">O que oferecemos</h1>
                 </div>
             </div>
             <div class="row m-1 p-3">
