--- a/objetivo.html
+++ b/objetivo.html
@@ -48,13 +48,13 @@
     <main>
         
         <div class="container text-center text-body-emphasis">
-            <div class="row m-3 p-3 bg-body-tertiary bg-opacity-100">
+            <div class="row m-3 p-3">
                 <div class="col-lg-12">
                     <h1 class="display-3 fw-semibold">O que oferecemos</h1>
                 </div>
             </div>
             <div class="row m-1 p-3">
-                <div class="col-lg-4 p-3 bg-body-tertiary rounded">
+                <div class="col-lg-4 p-3 bg-body-secondary rounded">
                     <div class="card">
                         <img src="img/produtividade.jpg" alt="" class="w-100 rounded-top">
                         <div class="card-body">
@@ -63,7 +63,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 py-3 bg-body-tertiary rounded">
+                <div class="col-lg-4 py-3 bg-body-secondary rounded">
                     <div class="card">
                         <img src="img/informacao.jpg" alt="" class="w-100 rounded-top">
                         <div class="card-body">
@@ -72,7 +72,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 py-3 bg-body-tertiary rounded">
+                <div class="col-lg-4 py-3 bg-body-secondary rounded">
                     <div class="card">
                         <img src="img/suporte.jpg" alt="" class="w-100 rounded-top">
                         <div class="card-body">
@@ -84,7 +84,7 @@
             </div>
         </div>
         <div class="container">
-            <div class="row m-4 p-3 align-items-center bg-body-tertiary rounded">
+            <div class="row m-4 p-3 align-items-center bg-body-secondary rounded">
                 <div class="col-lg-4">
                     <img src="img/equipetrab.jpg" alt="ambiente de trabalho" class="img-fluid w-100">
                 </div>
