--- a/1Sobre.html
+++ b/1Sobre.html
@@ -34,7 +34,7 @@
                             <a class="nav-link" href="#">Produto/Visão</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="objetivo.html">Objetivo</a>
+                            <a class="nav-link" href="3Objetivo.html">Objetivo</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Patrocinadores</a>
@@ -72,7 +72,7 @@
                 <div class="carousel-item">
                     <img src="img/analise.jpg" alt="img3" class="d-block w-100">
                     <div class="carousel-caption">
-                        <h2>ATUAMOS EM AlgUMAS ÁREAS</h2>
+                        <h2>ATUAMOS EM ALGUMAS ÁREAS</h2>
                         <P> CONHEÇA UM POUCO DO NOSSO TRABALHO</P>
                     </div>
                 </div>
