Adicionando os caminhos
Linkei os caminhos das paginas

--- a/3Objetivo.html
+++ b/3Objetivo.html
@@ -34,10 +34,10 @@
                             <a class="nav-link" href="#">Produto/Visão</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="#">Objetivo</a>
+                            <a class="nav-link active" href="3Objetivo.html">Objetivo</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Patrocinadores</a>
+                            <a class="nav-link" href="4Patrocinadores.html">Patrocinadores</a>
                         </li>
                     </ul>
                 </div>
