--- a/1Sobre.html
+++ b/1Sobre.html
@@ -37,7 +37,7 @@
                             <a class="nav-link" href="3Objetivo.html">Objetivo</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Patrocinadores</a>
+                            <a class="nav-link" href="4Patrocinadores.html">Patrocinadores</a>
                         </li>
                     </ul>
                 </div>
