--- a/3Objetivo.html
+++ b/3Objetivo.html
@@ -14,99 +14,105 @@
 
 <body>
     <div id="bg-image">
-    <header>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary bg-opacity-75">
-            <div class="container-fluid px-5 ">
-                <a class="navbar-brand" href="#">
-                    <img src="img/teste1-sem-fundo.png" alt="LogoMarca" width="170" height="125"
-                        class="d-inline-block align-text-top">
-                </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="1Sobre.html">Sobre nós/Surgirmento</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Produto/Visão</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active" href="3Objetivo.html">Objetivo</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="4Patrocinadores.html">Patrocinadores</a>
-                        </li>
-                    </ul>
+        <header>
+            <nav class="navbar navbar-expand-lg bg-body-tertiary bg-opacity-75">
+                <div class="container-fluid px-5 ">
+                    <a class="navbar-brand" href="#">
+                        <img src="img/teste1-sem-fundo.png" alt="LogoMarca" width="170" height="125"
+                            class="d-inline-block align-text-top">
+                    </a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+                        <ul class="navbar-nav">
+                            <li class="nav-item">
+                                <a class="nav-link" aria-current="page" href="1Sobre.html">Sobre nós/Surgirmento</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Produto/Visão</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link active" href="3Objetivo.html">Objetivo</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="4Patrocinadores.html">Patrocinadores</a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
-            </div>
-        </nav>
-    </header>
+            </nav>
+        </header>
 
-    <main>
-        
-        <div class="container text-center text-body-emphasis">
-            <div class="row m-3 p-3">
-                <div class="col-lg-12">
-                    <h1 class="display-3 fw-semibold">O que oferecemos</h1>
+        <main>
+
+            <div class="container text-center text-body-emphasis">
+                <div class="row m-3 p-3">
+                    <div class="col-lg-12">
+                        <h1 class="display-3 fw-semibold">O que oferecemos</h1>
+                    </div>
                 </div>
-            </div>
-            <div class="row m-1 p-3">
-                <div class="col-lg-4 p-3 bg-body-secondary rounded">
-                    <div class="card">
-                        <img src="img/produtividade.jpg" alt="" class="w-100 rounded-top">
-                        <div class="card-body">
-                            <h5 class="card-title">Produtividade</h5>
-                            <p class="card-text">Mantenha seu negócio produtivo, genrenciando-o de forma simples</p>
+                <div class="row m-1 p-3">
+                    <div class="col-lg-4 p-3 bg-body-secondary rounded">
+                        <div class="card">
+                            <img src="img/produtividade.jpg" alt="" class="w-100 rounded-top">
+                            <div class="card-body">
+                                <h5 class="card-title">Produtividade</h5>
+                                <p class="card-text">Mantenha seu negócio produtivo, genrenciando-o de forma simples</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 py-3 bg-body-secondary rounded">
+                        <div class="card">
+                            <img src="img/informacao.jpg" alt="" class="w-100 rounded-top">
+                            <div class="card-body">
+                                <h5 class="card-title">Informação</h5>
+                                <p class="card-text">Obtenha as informações que você parecisa para se manter atualizado
+                                    no mercado</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 py-3 bg-body-secondary rounded">
+                        <div class="card">
+                            <img src="img/suporte.jpg" alt="" class="w-100 rounded-top">
+                            <div class="card-body">
+                                <h5 class="card-title">Suporte</h5>
+                                <p class="card-text">Temos uma equipe pronta para atender às necessidades do seu negócio
+                                </p>
+                            </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 py-3 bg-body-secondary rounded">
-                    <div class="card">
-                        <img src="img/informacao.jpg" alt="" class="w-100 rounded-top">
-                        <div class="card-body">
-                            <h5 class="card-title">Informação</h5>
-                            <p class="card-text">Obtenha as informações que você parecisa para se manter atualizado no mercado</p>
-                        </div>
+            </div>
+            <div class="container">
+                <div class="row m-4 p-3 align-items-center bg-body-secondary rounded">
+                    <div class="col-lg-4">
+                        <img src="img/equipetrab.jpg" alt="ambiente de trabalho" class="img-fluid w-100">
                     </div>
-                </div>
-                <div class="col-lg-4 py-3 bg-body-secondary rounded">
-                    <div class="card">
-                        <img src="img/suporte.jpg" alt="" class="w-100 rounded-top">
-                        <div class="card-body">
-                            <h5 class="card-title">Suporte</h5>
-                            <p class="card-text">Temos uma equipe pronta para atender às necessidades do seu negócio </p>
-                        </div>
+                    <div class="col-lg">
+                        <h1 class="display-4 fst-italic my-2">O nosso objetivo</h1>
+                        <p class="lead my-3">
+                            O Projeto Infor Mei surge para impulsionar o crescimento e aprimoramento das regiões,
+                            identificando e atendendo às necessidades fundamentais das comunidades. Oferecemos suporte
+                            essencial para microempreendedores e autônomos, fornecendo ferramentas especializadas de
+                            gerenciamento de tempo, marketing e controle de custos, visando aprimorar suas operações e
+                            promover o sucesso de seus empreendimentos.
+                        </p>
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="container">
-            <div class="row m-4 p-3 align-items-center bg-body-secondary rounded">
-                <div class="col-lg-4">
-                    <img src="img/equipetrab.jpg" alt="ambiente de trabalho" class="img-fluid w-100">
-                </div>
-                <div class="col-lg">
-                    <h1 class="display-4 fst-italic my-2">O nosso objetivo</h1>
-                    <p class="lead my-3">
-                        O Projeto Infor Mei surge para impulsionar o crescimento e aprimoramento das regiões, identificando e atendendo às necessidades fundamentais das comunidades. Oferecemos suporte essencial para microempreendedores e autônomos, fornecendo ferramentas especializadas de gerenciamento de tempo, marketing e controle de custos, visando aprimorar suas operações e promover o sucesso de seus empreendimentos.
-                    </p>
-                </div>
+        </main>
+
+        <footer class="container-fluid text-white bg-dark">
+            <div class="row pb-5 pt-5 ">
             </div>
-        </div>
-    </main>
+        </footer>
 
-    <footer class="container-fluid text-white bg-dark">
-        <div class="row pb-5 pt-5 ">
-        </div>
-    </footer>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
-
-    </script>
+            </script>
     </div>
 </body>
 
