--- a/4Patrocinadores.html
+++ b/4Patrocinadores.html
@@ -28,17 +28,16 @@
                     <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
                         <ul class="navbar-nav">
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="1Sobre.html">Sobre
-                                    nós/Surgirmento</a>
+                                <a class="nav-link" aria-current="page" href="1Sobre.html">SOBRE NÓS/SURGIMENTO</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Produto/Visão</a>
+                                <a class="nav-link" href="#">PRODUTO</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="3Objetivo.html">Objetivo</a>
+                                <a class="nav-link" href="3Objetivo.html">OBJETIVO</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="4Patrocinadores.html">Patrocinadores</a>
+                                <a class="nav-link active" href="4Patrocinadores.html">PATROCINADORES</a>
                             </li>
                         </ul>
                     </div>
@@ -48,15 +47,15 @@
 
         <main>
 
-            <h3 class="display-4 text-center mb-5 mt-2 ">Patrocinadores</h3>
+            <h3 class="display-4 text-center my-5 fw-semibold ">Patrocinadores</h3>
 
             <div class="row text-center justify-content-center ">
 
-                <div class="card mx-3" style="width: 18rem;">
+                <div class="card m-3" style="width: 18rem;">
 
                     <img class="card-img-top" src="./img/mercadolivre.jpg" alt="imagem Mercado Livre">
                     <div class="card-body justify-content-around">
-                        <p class="card-text text-start">
+                        <p class="card-text text-center">
                             Na economia do conhecimento, há inúmeras oportunidades disponíveis que dependem da
                             transformação digital das pessoas para que possam ser capitalizadas.
                             Afroempreendedorismo e Certified Tech Developer são alguns dos projetos que o Mercado Livre
@@ -64,10 +63,10 @@
                     </div>
                 </div>
 
-                <div class="card" style="width: 18rem;">
+                <div class="card m-3" style="width: 18rem;">
                     <img class="card-img-top my-5" src="./img/senac-logo-1-1.png" alt="imagem Senac">
                     <div class="card-body">
-                        <p class="card-text text-start">Desde 1946, o Senac é o principal educador profissional para o
+                        <p class="card-text text-center">Desde 1946, o Senac é o principal educador profissional para o
                             setor de
                             Comércio, Serviços e Turismo no
                             Brasil. Presente em mais de 1.800 municípios, mantém uma avançada infraestrutura com mais de
@@ -82,37 +81,24 @@
             <div class="container">
 
                 <div>
-                    <h3 class="display-4 mt-5 mb-5 text-center">A nossa escolha</h3>
+                    <h3 class="display-4 my-5 text-center fw-semibold">A NOSSA ESCOLHA</h3>
                 </div>
 
-                <div class="row align-content-around bg-body-tertiary container mb-5">
-                    <div class="col-lg my-5">
+                <div class="container row align-content-around bg-body-tertiary  mb-5 mx-0">
+                    <div class="col-lg lead my-5">
                         <p>
                             Com uma impressionante presença nacional, classificando-se como a 9ª empresa de maior volume
-                            de
-                            vendas
-                            no Brasil, o Mercado Livre emerge como uma parceria de magnitude extraordinária, capaz de
-                            atrair
-                            colaboradores e clientes provenientes de diversas esferas. Por outro lado, o Senac
-                            destaca-se
-                            com
-                            mais
-                            de 7 mil indicações bem-sucedidas para o mercado de trabalho, experimentando um notável
-                            crescimento
-                            no
-                            setor de Tecnologia. Associar-se a essa instituição proporcionaria uma visibilidade
-                            significativa,
-                            representando um valioso acréscimo para nossa trajetória.
+                            de vendas no Brasil, o Mercado Livre emerge como uma parceria de magnitude extraordinária, capaz de atrair colaboradores e clientes provenientes de diversas esferas. Por outro lado, o Senac destaca-se com mais de 7 mil indicações bem-sucedidas para o mercado de trabalho, experimentando um notável crescimento no setor de Tecnologia. Associar-se a essa instituição proporcionaria uma visibilidade significativa, representando um valioso acréscimo para nossa trajetória.
                         </p>
                     </div>
 
-                    <div class="col-lg my-5"> <img src="./img/patrocinadores.png" alt="imgdosptrcinadores"
-                            class="img-fluid-w-100">
+                    <div class="col-lg-5 my-5 text-center"> <img class="img-fluid" src="./img/patrocinadores.png"
+                            alt="imgdosptrcinadores">
+
                     </div>
                 </div>
             </div>
-
-
+           
         </main>
 
         <footer class="container-fluid text-white bg-dark">
