--- a/3Objetivo.html
+++ b/3Objetivo.html
@@ -28,16 +28,16 @@
                     <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
                         <ul class="navbar-nav">
                             <li class="nav-item">
-                                <a class="nav-link" aria-current="page" href="1Sobre.html">Sobre nós/Surgirmento</a>
+                                <a class="nav-link" aria-current="page" href="1Sobre.html">SOBRE NÓS/SURGIMENTO</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Produto/Visão</a>
+                                <a class="nav-link" href="#">PRODUTO</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link active" href="3Objetivo.html">Objetivo</a>
+                                <a class="nav-link active" href="3Objetivo.html">OBJETIVO</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="4Patrocinadores.html">Patrocinadores</a>
+                                <a class="nav-link" href="4Patrocinadores.html">PATROCINADORES</a>
                             </li>
                         </ul>
                     </div>
