--- a/3Objetivo.html
+++ b/3Objetivo.html
@@ -50,7 +50,7 @@
             <div class="container text-center text-body-emphasis">
                 <div class="row m-3 p-3">
                     <div class="col-lg-12">
-                        <h1 class="display-3 fw-semibold">O que oferecemos</h1>
+                        <h1 class="display-4 fw-semibold">O que oferecemos</h1>
                     </div>
                 </div>
                 <div class="row m-1 p-3">
@@ -85,13 +85,13 @@
                     </div>
                 </div>
             </div>
+            <h1 class="display-4 fw-semibold text-center my-2">O nosso objetivo</h1>
             <div class="container">
                 <div class="row m-4 p-3 align-items-center bg-body-secondary rounded">
                     <div class="col-lg-4">
                         <img src="img/equipetrab.jpg" alt="ambiente de trabalho" class="img-fluid w-100">
                     </div>
                     <div class="col-lg">
-                        <h1 class="display-4 fst-italic my-2">O nosso objetivo</h1>
                         <p class="lead my-3">
                             O Projeto Infor Mei surge para impulsionar o crescimento e aprimoramento das regiões,
                             identificando e atendendo às necessidades fundamentais das comunidades. Oferecemos suporte
