--- a/1Sobre.html
+++ b/1Sobre.html
@@ -92,7 +92,7 @@
 
             <div id="bg-image">
 
-                <p class="display-4 text-center m-5 fw-semibold"> UM POUCO SOBRE NÓS</p>
+                <p class="display-4 text-center my-5 fw-semibold"> UM POUCO SOBRE NÓS</p>
                 <div class="container-fluid text-center">
 
                     <div class="container bg-body-secondary">
@@ -203,7 +203,7 @@
                         </div>
                     </div>
                     
-                    <h3 id="surgimento" class=" display-4 text-center m-5 px-5 fw-semibold"> COMO SURGIU O PROJETO</h3>
+                    <h3 id="surgimento" class=" display-4 text-center my-5 fw-semibold"> COMO SURGIU O PROJETO</h3>
 
                     <div class="container bg-body-secondary mb-5 text-center ">
     
