--- a/4Patrocinadores.html
+++ b/4Patrocinadores.html
@@ -47,7 +47,7 @@
 
         <main>
 
-            <h3 class="display-4 text-center my-5 fw-semibold ">Patrocinadores</h3>
+            <h3 class="display-4 text-center my-5 fw-semibold ">PATROCINADORES</h3>
 
             <div class="row text-center justify-content-center ">
 
