--- a/3Objetivo.html
+++ b/3Objetivo.html
@@ -50,7 +50,7 @@
             <div class="container text-center text-body-emphasis">
                 <div class="row m-3 p-3">
                     <div class="col-lg-12">
-                        <h1 class="display-4 fw-semibold">O que oferecemos</h1>
+                        <h1 class="display-4 fw-semibold my-5">O QUE OFERECEMOS</h1>
                     </div>
                 </div>
                 <div class="row m-1 p-3">
@@ -85,7 +85,7 @@
                     </div>
                 </div>
             </div>
-            <h1 class="display-4 fw-semibold text-center my-2">O nosso objetivo</h1>
+            <h1 class="display-4 fw-semibold text-center my-5">NOSSO OBJETIVO</h1>
             <div class="container">
                 <div class="row m-4 p-3 align-items-center bg-body-secondary rounded">
                     <div class="col-lg-4">
