--- a/4Patrocinadores.html
+++ b/4Patrocinadores.html
@@ -47,7 +47,7 @@
 
         <main>
 
-            <h3 class="display-4 text-center my-5 fw-semibold ">PATROCINADORES</h3>
+            <h3 class="display-4 text-center text-body-emphasis my-5">PATROCINADORES</h3>
 
             <div class="row text-center justify-content-center ">
 
@@ -81,11 +81,11 @@
             <div class="container">
 
                 <div>
-                    <h3 class="display-4 my-5 text-center fw-semibold">A NOSSA ESCOLHA</h3>
+                    <h3 class="display-4 my-5 text-center text-body-emphasis">A NOSSA ESCOLHA</h3>
                 </div>
 
                 <div class="container row align-content-around bg-body-tertiary  mb-5 mx-0">
-                    <div class="col-lg lead my-5">
+                    <div class="escolha-complete col-lg lead my-5">
                         <p>
                             Com uma impressionante presença nacional, classificando-se como a 9ª empresa de maior volume
                             de vendas no Brasil, o Mercado Livre emerge como uma parceria de magnitude extraordinária, capaz de atrair colaboradores e clientes provenientes de diversas esferas. Por outro lado, o Senac destaca-se com mais de 7 mil indicações bem-sucedidas para o mercado de trabalho, experimentando um notável crescimento no setor de Tecnologia. Associar-se a essa instituição proporcionaria uma visibilidade significativa, representando um valioso acréscimo para nossa trajetória.
