--- a/1Sobre.html
+++ b/1Sobre.html
@@ -93,17 +93,17 @@
 
             <div id="bg-image">
 
-                <p class="display-4 text-center my-5 text-body-emphasis"> UM POUCO SOBRE NÓS</p>
-                <div class="container-fluid text-center">
+                <p class="display-4 text-center my-5 text-body-emphasis"> <img src="img/lampada-sem-fundo.png" alt="LampMarca"> UM POUCO SOBRE NÓS</p>
+                <div class="container-fluid text-center">   
 
-                    <div class="container bg-body-secondary">
+                    <div class="container bg-body-secondary  bg-opacity-25">
                         <div class="row justify-content-around">
 
                             <div class="col-lg-4 text-center">
                                 <img src="img/caminhando.jpg" title="caminhando" alt="Caminhando">
                             </div>
 
-                            <div class="col-lg-6 pt-5 text-start">
+                            <div class="col-lg-6 pt-5 text-start ">
 
                                 <p class="display-6"> Eu sou Lázaro, tenho 23 anos e sou de Salvador-BA. </p>
                                 <hr>
@@ -117,7 +117,7 @@
                         </div>
                     </div>
 
-                    <div class="container bg-body-secondary">
+                    <div class="container bg-body-secondary bg-opacity-25">
                         <div class="row justify-content-around m-5">
 
                             <div class="col-lg-6 text-start ">
@@ -139,7 +139,7 @@
                         </div>
                     </div>
 
-                    <div class="container bg-body-secondary">
+                    <div class="container bg-body-secondary bg-opacity-25">
                         <div class="row justify-content-around m-5">
 
                             <div class="col-lg-6 py-5">
@@ -162,7 +162,7 @@
                         </div>
                     </div>
 
-                    <div class="container bg-body-secondary">
+                    <div class="container bg-body-secondary bg-opacity-25">
                         <div class="row justify-content-around my-5">
 
                             <div class="col-lg-6 text-start">
@@ -185,9 +185,9 @@
                         </div>
                     </div>
 
-                    <h3 id="surgimento" class=" display-4 text-center text-body-emphasis my-5"> COMO SURGIU O PROJETO</h3>
+                    <h3 id="surgimento" class=" display-4 text-center text-body-emphasis my-5" > <img src="img/lampada-sem-fundo.png" alt="LampMarca">COMO SURGIU O PROJETO</h3>
 
-                    <div class="container bg-body-secondary mb-5 text-center ">
+                    <div class="container bg-body-secondary bg-opacity-25 mb-5 text-center ">
 
                         <div class="row justify-content-around">
 
@@ -195,12 +195,10 @@
                                 <img class="img-fluid " src="img/analista.jpg" alt="analista">
                             </div>
 
-                            <div class="col-lg-5 m-5 ">
+                            <div class="objet-complete text-start col-lg-5 m-5 ">
                                 <hr>
                                 <p class="lead">
-                                    Com base em todos os depoimentos que foram feitos sobre problemas e soluções, nasceu
-                                    o Projeto Infor Mei que leva conhecimento de maneira simplificada acerca de gestão
-                                    de negócios.
+                                    Com base em todos os depoimentos que foram feitos sobre problemas e soluções, nasceu o <span class="fw-bold"> Projeto Infor Mei </span>  que leva conhecimento de maneira simplificada acerca de gestão de negócios.
                                 </p>
                                 <hr>
                             </div>
