--- a/4Patrocinadores.html
+++ b/4Patrocinadores.html
@@ -47,15 +47,15 @@
 
         <main>
 
-            <h3 class="display-4 text-center text-body-emphasis my-5">PATROCINADORES</h3>
+            <h3 class="display-4 text-center text-body-emphasis my-5"> <img src="img/lampada-sem-fundo.png" alt="LampMarca"> PATROCINADORES</h3>
 
             <div class="row text-center justify-content-center ">
 
-                <div class="card m-3" style="width: 18rem;">
+                <div class="card-PT card m-3" style="width: 18rem;">
 
                     <img class="card-img-top" src="./img/mercadolivre.jpg" alt="imagem Mercado Livre">
                     <div class="card-body justify-content-around">
-                        <p class="card-text text-center">
+                        <p class="text-Mele card-text ">
                             Na economia do conhecimento, há inúmeras oportunidades disponíveis que dependem da
                             transformação digital das pessoas para que possam ser capitalizadas.
                             Afroempreendedorismo e Certified Tech Developer são alguns dos projetos que o Mercado Livre
@@ -63,10 +63,10 @@
                     </div>
                 </div>
 
-                <div class="card m-3" style="width: 18rem;">
-                    <img class="card-img-top my-5" src="./img/senac-logo-1-1.png" alt="imagem Senac">
+                <div class=" card-PT card m-3" style="width: 18rem;">
+                    <img class="card-img-top my-5 py-1" src="./img/senac-logo-1-1.png" alt="imagem Senac">
                     <div class="card-body">
-                        <p class="card-text text-center">Desde 1946, o Senac é o principal educador profissional para o
+                        <p class="text-Senac card-text ">Desde 1946, o Senac é o principal educador profissional para o
                             setor de
                             Comércio, Serviços e Turismo no
                             Brasil. Presente em mais de 1.800 municípios, mantém uma avançada infraestrutura com mais de
@@ -81,10 +81,10 @@
             <div class="container">
 
                 <div>
-                    <h3 class="display-4 my-5 text-center text-body-emphasis">A NOSSA ESCOLHA</h3>
+                    <h3 class="display-4 my-5 text-center text-body-emphasis"> <img src="img/lampada-sem-fundo.png" alt="LampMarca"> A NOSSA ESCOLHA</h3>
                 </div>
 
-                <div class="container row align-content-around bg-body-tertiary  mb-5 mx-0">
+                <div class="container row align-content-around bg-body-secondary bg-opacity-25 mb-5 mx-0">
                     <div class="escolha-complete col-lg lead my-5">
                         <p>
                             Com uma impressionante presença nacional, classificando-se como a 9ª empresa de maior volume
