--- a/2VisãoEProduto.html
+++ b/2VisãoEProduto.html
@@ -27,16 +27,16 @@
                         <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
                             <ul class="navbar-nav">
                                 <li class="nav-item">
-                                    <a class="nav-link active" aria-current="page" href="./1Sobre.html">Sobre nós/Surgirmento</a>
+                                    <a class="nav-link " aria-current="page" href="1Sobre.html">Sobre nós/Surgirmento</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="./2VisãoEProduto.html">Produto/Visão</a>
+                                    <a class="nav-link active" href="2VisãoEProduto.html">Produto/Visão</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="./3Objetivo.html">Objetivo</a>
+                                    <a class="nav-link" href="3Objetivo.html">Objetivo</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="./4Patrocinadores.html">Patrocinadores</a>
+                                    <a class="nav-link" href="4Patrocinadores.html">Patrocinadores</a>
                                 </li>
                             </ul>
                         </div>
